// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TrendingMovies Match its snapshot. Array provided 1`] = `
exports[`Component: TopFilms Match its snapshot. Display ...Loading  1`] = `
<PageLayout
  array={
    Array [
      Object {
        "id": 1,
        "overview": "Some description",
        "title": "Some title",
      },
    ]
  }
  currentPage={0}
  empty={false}
  error={false}
        "poster_path": "path to picture",
        "title": "Some title",
      },
      Object {
        "id": 2,
        "poster_path": "path to another picture",
        "title": "Another title",
      },
    ]
  }
  currentPage={0}
  goToNextPage={[Function]}
  history={
    Object {
      "push": [Function],
    }
  }
  loading={false}
  loading={true}
  operations={[Function]}
  removeBox={false}
  title=""
  totalResults={0}
/>
`;

exports[`Component: TrendingMovies Match its snapshot. Error 1`] = `
<PageLayout
  array={Array []}
  currentPage={0}
  empty={false}
  error={true}
  goToNextPage={[Function]}
  history={
    Object {
      "push": [Function],
    }
  }
  loading={false}
  operations={[Function]}
  removeBox={false}
  title=""
  totalResults={0}
/>
`;

exports[`Component: TrendingMovies Match its snapshot. Loading ... 1`] = `
<PageLayout
  array={Array []}
  currentPage={0}
  empty={false}
  error={false}
exports[`Component: TopFilms Match its snapshot. Display Data from DataBse 1`] = `
<PageLayout
  array={
    Array [
      Object {
        "id": 1,
        "poster_path": "path to picture",
        "title": "Some title",
      },
      Object {
        "id": 2,
        "poster_path": "path to another picture",
        "title": "Another title",
      },
    ]
  }
  currentPage={0}
  goToNextPage={[Function]}
  history={
    Object {
      "push": [Function],
    }
  }
  loading={true}
  loading={false}
  operations={[Function]}
  removeBox={false}
  title=""
  totalResults={0}
/>
`;
